fixed layout bugs

--- a/src/vbs/pages/SpecificVenue.css
+++ b/src/vbs/pages/SpecificVenue.css
@@ -22,8 +22,11 @@
   background-color: #ecdbba;
   text-align: center;
   font-family: "Raleway", sans-serif;
-  margin: 0 0;
-  margin-bottom: 1%;
+  margin: 1% 0;
+}
+
+.vbs {
+  font-family: "Raleway", sans-serif;
 }
 
 .scheduleAndCalendar {
